--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,10 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
 	<title>Skovvart's TV-guide</title>
 	<meta property="og:description" itemprop="description" name="description"
 		content="Hvad er der på TV i aften? TV-guide for Danske kanaler.">
-
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<!-- <link rel='stylesheet' href='/global.css'> -->
 	<style>
 		html,
 		body {
@@ -28,11 +25,9 @@
 		}
 	</style>
 	<link rel='stylesheet' href='/build/bundle.css'>
-
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body>
-</body>
+<body></body>
 
 </html>
